# VisionAI-Toolkit

./: CMakeLists.txt  README.md
src/: main.cpp
src/ImagePreprocessing/: resize.cpp  resize.h
